# librm

./: .gitmodules  CMakeLists.txt  README.md  update_copyright.py
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/libs/: Makefile  cmake_install.cmake
_codeql_build_dir/libs/eigen/: Makefile  cmake_install.cmake
_codeql_build_dir/libs/etl/: Makefile  cmake_install.cmake
_codeql_build_dir/libs/kalman/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/src/librm/: Makefile  cmake_install.cmake
cmake/: detect_platform.cmake
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json
docs/docs/tutorials/: chassis-fkik.mdx  device-status-monitor.mdx  dsp-filters.mdx  keyboard-handler.mdx  m3508-power-model.mdx  motor-calibrator.mdx  motor-drivers.mdx  referee.mdx  trajectory-limiter.mdx
libs/: CMakeLists.txt
libs/ardupilot_filter_lib/: AP_Filter.cpp  CMakeLists.txt  DerivativeFilter.cpp  HarmonicNotchFilter.cpp  LowPassFilter.cpp  LowPassFilter2p.cpp  NotchFilter.cpp  README_STANDALONE.md  SlewLimiter.cpp
libs/ardupilot_filter_lib/ap_filters/: HarmonicNotchFilter.h  LowPassFilter.h  LowPassFilter2p.h  NotchFilter.h  filter_config.h  filter_math.h
libs/hipnuc_sdk/include/hipnuc/: canopen_parser.h  hipnuc_dec.h
libs/hipnuc_sdk/src/: hipnuc_dec.c
src/: CMakeLists.txt  librm.hpp
src/librm/: CMakeLists.txt
src/librm/core/: exception.hpp  thread_pool.hpp  time.hpp  traits.hpp  typedefs.hpp
src/librm/device/: can_device.hpp  device.cc  device.hpp
src/librm/device/actuator/: directdrive_motor.cc  directdrive_motor.hpp  dji_motor.cc  dji_motor.hpp  dm_motor.hpp  go8010_motor.cc  go8010_motor.hpp  lk_motor.hpp  unitree_motor.cc  unitree_motor.hpp  zdt_stepper.cc  zdt_stepper.hpp
src/librm/device/referee/: protocol.hpp  protocol_new_v110.hpp  protocol_v164.hpp  protocol_v170.hpp  referee.hpp
src/librm/device/remote/: dr16.cc  dr16.hpp  sbus.cc  sbus.hpp  vt03.hpp
src/librm/device/sensor/: bmi088.cc  bmi088.hpp  bmi088_const.hpp  hipnuc_imu.cc  hipnuc_imu.hpp  hipnuc_imu_can.hpp  ist8310.cc  ist8310.hpp  ist8310_const.hpp  jy_me02_can.hpp  stp23l.cc  stp23l.hpp
src/librm/device/supercap/: gk_supercap.cc  gk_supercap.hpp  supercap.cc  supercap.hpp
src/librm/hal/: can.hpp  can_interface.hpp  gpio.hpp  gpio_interface.hpp  serial.hpp  serial_interface.hpp  spi.hpp  spi_interface.hpp  timer.hpp  timer_interface.hpp
src/librm/hal/linux/: serial.cc  serial.hpp  socketcan.cc  socketcan.hpp  timerfd.cc  timerfd.hpp
src/librm/hal/raspi/: gpio.hpp  wiringpi_init.cc  wiringpi_init.hpp
src/librm/hal/stm32/: bxcan.cc  bxcan.hpp  check_register_callbacks.hpp  exception.hpp  fdcan.cc  fdcan.hpp  gpio.cc  gpio.hpp  hal.hpp  helper_macro.hpp  i2c_device.cc  i2c_device.hpp  posix_complement.cc  spi.cc  spi.hpp  spi_device.cc  spi_device.hpp  uart.cc  uart.hpp
src/librm/modules/: angle.hpp  buzzer_controller.hpp  chassis_fkik.hpp  crc.cc  crc.hpp  dsp_filters.hpp  float16.cc  float16.hpp  keyboard_handler.hpp  m3508_power_model.hpp  motor_calibrator.hpp  pid.cc  pid.hpp  rgb_led_controller.hpp  sequence_player.hpp  sparse_value_watcher.hpp  threshold_trigger.hpp  trajectory_limiter.cc  trajectory_limiter.hpp  utils.cc  utils.hpp  vofa_plotter.hpp
src/librm/modules/ahrs/: ahrs_interface.hpp  ekf.cc  ekf.hpp  mahony.cc  mahony.hpp
src/librm/modules/rpc/: polling_timer.hpp  rpc_fdcan_transport.hpp
test/: CMakeLists.txt  keyboard_handler.cc  pid.cc  trajectory_limiter.cc
